# TeamUp-Test

./: README.md  pyproject.toml
TeamUpTest/: manage.py
TeamUpTest/TeamUpTest/: asgi.py  settings.py  urls.py  wsgi.py
TeamUpTest/Tests/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
TeamUpTest/Tests/migrations/: 0001_initial.py  0002_auto_20230620_2022.py  0003_auto_20230620_2043.py  0004_auto_20230624_1823.py  0005_auto_20230624_1940.py  0006_auto_20230625_1451.py  0007_auto_20230625_1539.py
